--- a/Modakbul_Backend-minwoo/templates/signup.html
+++ b/Modakbul_Backend-minwoo/templates/signup.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="../static/parsley.js" type="text/javascript"></script>  <!--유효성 검증 js-->
+    <script src="../../../Modakbul_Frontend-frontend-layout/Modakbul_Frontend-frontend-layout/myproject/static/parsley.js" type="text/javascript"></script>  <!--유효성 검증 js-->
     <title>회원가입</title>
 </head>
 <body>
