--- a/Modakbul_Backend-minwoo/templates/login.html
+++ b/Modakbul_Backend-minwoo/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../static/parsley.js" type="text/javascript"></script>  <!--유효성 검증 js-->
+    <script src="../../../Modakbul_Frontend-frontend-layout/Modakbul_Frontend-frontend-layout/myproject/static/parsley.js" type="text/javascript"></script>  <!--유효성 검증 js-->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
     <meta charset="UTF-8">
     <title>모닥불</title>
