--- a/Modakbul_Backend-minwoo/templates/mypage.html
+++ b/Modakbul_Backend-minwoo/templates/mypage.html
@@ -7,61 +7,59 @@
     <title>모닥불</title>
 </head>
 <style>
-    html, body {
+    html, body{
         margin: 0;
         border: 0;
-        width: 100%;
+        width : 100%;
         height: 100%;
     }
 
-    h2, h3 {
-        margin: 0;
+    h2, h3{
+        margin:0;
     }
 
-    .main {
-        display: flex;
+    .main{
+        display:flex;
         flex-direction: column;
         margin: 0;
         border: 0;
-        width: 100%;
+        width : 100%;
         height: 100%;
     }
 
-    header {
-        top: 0px;
+    header{
+        top:0px;
         padding: 1rem 2rem;
-        z-index: 10;
-        display: flex;
+        z-index:10;
+        display:flex;
         position: relative;
         justify-content: space-between;
         align-items: center;
         background-color: white;
         border-bottom: 1px solid lightgray;
     }
-
-    .navbar {
+    .navbar{
         display: flex;
         position: relative;
     }
-
-    .search input {
-        height: 30px;
-        margin-right: 1rem;
+    .search input{
+        height:30px;
+        margin-right:1rem;
     }
 
-    .contents {
+    .contents{
         display: flex;
-        justify-content: center;
+        justify-content:center;
         height: 100%;
         flex-direction: column;
         overflow: hidden;
     }
 
     .category {
-        flex: auto;
+        flex:auto;
         padding: 1rem;
         padding-bottom: 0;
-        display: flex;
+        display:flex;
         position: relative;
         align-items: center;
         background-color: lightblue;
@@ -75,305 +73,182 @@
         display: flex;
     }
 
-    .category form select {
-        height: 30px;
+    .category form select{
+        height:30px;
     }
 
-    .tags {
+    .tags{
         background-color: white;
-        padding: 0.1rem;
+        padding:0.1rem;
         font-size: 0.5rem;
     }
 
-    .cardContainer {
+    .cardContainer{
         position: relative;
-        display: flex;
+        display:flex;
         align-items: center;
         background-color: lightblue;
         z-index: 5;
         padding: 1rem;
-        padding-bottom: 1.5rem;
+        padding-bottom:1.5rem;
         height: 100%;
     }
-
-    .cards {
-        flex: auto;
+    .cards{
+        flex:auto;
         position: relative;
-        display: flex;
+        display:flex;
         align-items: stretch;
-        flex-direction: row;
+        flex-direction:row;
         overflow: scroll;
         white-space: nowrap;
         ms-overflow-style: none; /* IE and Edge */
         scrollbar-width: none; /* Firefox */
-        height: 100%;
+        height:100%;
     }
 
     .cards::-webkit-scrollbar {
         display: none; /* Chrome, Safari, Opera*/
     }
 
-    .cards ul {
+    .cards ul{
         padding: 0;
         margin: 0;
     }
 
-    .card {
+    .card{
         height: 99%;
-        padding: 0;
-        margin-left: 0;
-        margin-right: 2px;
+        padding:0;
+        margin-left:0;
+        margin-right:2px;
         display: inline-block;
         position: relative;
         list-style: none;
-        width: 200px;
+        width:200px;
         border: 1px solid gray;
-        background-color: white;
+        background-color:white;
+    }
+    .scrollBt-right{
+        position:absolute;
+        right:0;
+        z-index:4;
     }
 
-    .scrollBt-right {
-        position: absolute;
-        right: 0;
-        z-index: 4;
+    .scrollBt-left{
+        position:absolute;
+        left:0;
+        z-index:4;
     }
 
-    .scrollBt-left {
-        position: absolute;
-        left: 0;
-        z-index: 4;
-    }
-
-    .listTitle {
+    .listTitle{
         font-weight: bold;
     }
 
-    .myPage {
-        flex: auto;
+    .myPage{
+        flex:auto;
         display: flex;
         align-items: center;
     }
 
-    .sidePage {
-        height: 100%;
-        display: flex;
+    .sidePage{
+        height:100%;
+       display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
     }
 
-    .sideTop {
+    .sideTop{
 
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 200px;
-        padding: 2rem;
+        width:200px;
+        padding : 2rem;
         text-align: center;
     }
 
-    .profilepic {
-        width: 150px;
-        height: 150px;
+    .profilepic{
+        width:150px;
+        height:150px;
         background-color: lightgray;
         border-radius: 50%;
         display: inline-block;
     }
 
-    .sidePage .listTitle {
+    .sidePage .listTitle{
         padding-top: 1rem;
     }
 
-    .makeMeet {
-        margin-top: 1rem;
+    .makeMeet{
+        margin-top:1rem;
         width: 100%;
-        height: 30px;
+        height:30px;
         border-radius: 30px;
     }
 
-    .level {
+    .level{
         font-size: 13px;
-        color: gray;
+        color:gray;
     }
 
-    .sideOptions {
+    .sideOptions{
         list-style: none;
         padding-left: 0;
         text-align: left;
     }
 
-    /*popup*/
-    .popup_layer {
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 10000;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.4);
-    }
-
-    /*팝업 박스*/
-    .popup_box {
-        position: relative;
-        top: 50%;
-        left: 50%;
-        overflow: auto;
-        height: 600px;
-        width: 375px;
-        transform: translate(-50%, -50%);
-        z-index: 1002;
-        box-sizing: border-box;
-        background: #fff;
-        box-shadow: 2px 5px 10px 0px rgba(0, 0, 0, 0.35);
-        -webkit-box-shadow: 2px 5px 10px 0px rgba(0, 0, 0, 0.35);
-        -moz-box-shadow: 2px 5px 10px 0px rgba(0, 0, 0, 0.35);
-    }
-
-    /*컨텐츠 영역*/
-    .popup_box .popup_cont {
-        padding: 50px;
-        line-height: 1.4rem;
-        font-size: 14px;
-    }
-
-    .popup_box .popup_cont h2 {
-        padding: 15px 0;
-        color: #333;
-        margin: 0;
-    }
-
-    .popup_box .popup_cont p {
-        border-top: 1px solid #666;
-        padding-top: 30px;
-    }
-
-    /*버튼영역*/
-    .popup_box .popup_btn {
-        display: table;
-        table-layout: fixed;
-        width: 100%;
-        height: 70px;
-        background: #ECECEC;
-        word-break: break-word;
-    }
-
-    .popup_box .popup_btn a {
-        position: relative;
-        display: table-cell;
-        height: 70px;
-        font-size: 17px;
-        text-align: center;
-        vertical-align: middle;
-        text-decoration: none;
-        background: #ECECEC;
-    }
-
-    .popup_box .popup_btn a:before {
-        content: '';
-        display: block;
-        position: absolute;
-        top: 26px;
-        right: 29px;
-        width: 1px;
-        height: 21px;
-        background: #fff;
-        -moz-transform: rotate(-45deg);
-        -webkit-transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-        -o-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-    }
-
-    .popup_box .popup_btn a:after {
-        content: '';
-        display: block;
-        position: absolute;
-        top: 26px;
-        right: 29px;
-        width: 1px;
-        height: 21px;
-        background: #fff;
-        -moz-transform: rotate(45deg);
-        -webkit-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-        transform: rotate(45deg);
-    }
-
-    .popup_box .popup_btn a.close_day {
-        background: #5d5d5d;
-    }
-
-    .popup_box .popup_btn a.close_day:before, .popup_box .popup_btn a.close_day:after {
-        display: none;
-    }
-
-    /*오버레이 뒷배경*/
-    .popup_overlay {
-        position: fixed;
-        top: 0px;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        z-index: 1001;;
-        background: rgba(0, 0, 0, 0.5);
-    }
-
-    /*popup*/
 
 </style>
 <body>
-<div class="main container">
-    <header class="container">
-        <a class="logo" href="/"> 모닥불 </a>
-        <nav class="navbar">
-            <div class="search">
-                <form action="#" method="post">
-                    <input type="text" name="keyword" placeholder="검색">
-                    <input type="submit" value="src">
-                </form>
-            </div>
-            <button class="mypageBt"><a href="/mypage">mypage</a></button>
-        </nav>
-    </header>
-    <div class="myPage container">
-        <div class="sidePage">
-            <div class="sideTop">
-                <div class="profilepic">
-                    {% if session['profile'] %} <!-- 프로필이 있다면 -->
-                        <img src="{{ session['profile'] }}" width="150px" ; height="150px;" style="border-radius: 50%;">
+   <div class="main container">
+       <header class="container">
+           <a class="logo" href="/"> 모닥불 </a>
+           <nav class="navbar">
+           <div class="search"><form action="#" method="post">
+               <input type="text" name="keyword" placeholder="검색">
+               <input type="submit" value="src">
+           </form></div>
+           <button class="mypageBt"><a href="/mypage">mypage</a></button>
+           </nav>
+        </header>
+            <div class="myPage container">
+            <div class="sidePage">
+               <div class="sideTop">
+               <div class="profilepic">
+                   {% if session['profile'] %} <!-- 프로필이 있다면 -->
+                        <img src="{{session['profile']}}" width="150px"; height="150px;" style="border-radius: 50%;">
                     {% endif %}
-                </div>
-                <h2 class="listTitle" id="user_name1">{{ session['username'] }}</h2>
-                <h4 style="display:none" id="user_id1">{{ session['userid'] }}</h4>
+               </div>
+                <h2 class="listTitle">{{session['username']}}</h2>
+                               <h4 style="display:none" id="user_id1">{{ session['userid'] }}</h4>
                 <div class="level">Lv. 00</div>
-                <button class="makeMeet" onclick="openPop()">모임만들기</button>
+                <button class="makeMeet">모임만들기</button>
                 <ul class="sideOptions">
-                    <li>프로필 수정</li>
-                    <li>내 모임</li>
-                    <li>참여중 모임</li>
-                    <li>대기중 모임</li>
+               <li><a href="/pfedit">프로필 수정</a></li>
+                    <li><a href="/mymeets">내 모임</a></li>
+                    <li><a href="/mymeets">참여중 모임</a></li>
+                    <li><a href="/mymeets">대기중 모임</a></li>
                 </ul>
-            </div>
+                </div>
 
-            <a href="/logout" class="logout">로그아웃</a>
-        </div>
-        <div class="contents conatainer">
-            <div class="category">
-                <h3 class="ListTitle">내 모임</h3>
-                <form action="#" method="post">
-                    <!-- 디자인 하려면 button->li로 넣어야 할듯 -->
+                <a href="/logout" class="logout">로그아웃</a>
+                </div>
+           <div class="contents conatainer">
+                <div class="category">
+                  <h3 class="ListTitle">내 모임</h3>
+                  <form action="#" method="post">
+                   <!-- 디자인 하려면 button->li로 넣어야 할듯 -->
                     <select name="openClosed" id="openClosed">
                         <option value="모집중">모집 중</option>
                         <option value="모집완료">모집 완료</option>
                     </select>
-                </form>
-            </div>
-            <script>
-                //마우스 가로 스크롤 이벤트
-                $(function () {
+               </form>
+                </div>
+               <script>
+                   //마우스 가로 스크롤 이벤트
+                $(function() {
 
-                    $(".cards").mousewheel(function (event, delta) {
+                    $(".cards").mousewheel(function(event, delta) {
 
                         this.scrollLeft -= (delta * 30);
 
@@ -382,37 +257,36 @@
                     });
 
                 });
-            </script> <!--내 모임-->
-            <div class="cardContainer">
-                <div class="cards makeSelf">
+               </script>
+               <div class="cardContainer">
+               <div class="cards makeSelf">
                     <ul id="mycard">
                         <!-- 이 부분에 <li>로 모임 카드들 추가됨-->
                     </ul>
-                </div>
-                <div class="scrollBt-left">왼쪽버튼</div>
-                <div class="scrollBt-right">오른쪽버튼</div>
+               </div>
+                   <div class="scrollBt-left">왼쪽버튼</div>
+                   <div class="scrollBt-right">오른쪽버튼</div>
             </div>
             <div class="category">
-                <h3 class="ListTitle">참여중 모임</h3>
-                <form action="#" method="post">
-                    <!-- 디자인 하려면 button->li로 넣어야 할듯 -->
+                  <h3 class="ListTitle">참여중 모임</h3>
+                  <form action="#" method="post">
+                   <!-- 디자인 하려면 button->li로 넣어야 할듯 -->
                     <select name="openClosed" id="openClosed">
                         <option value="모집중">모집 중</option>
                         <option value="모집완료">모집 완료</option>
                     </select>
-                </form>
-            </div>
+               </form>
+                </div>
             <div class="cardContainer">
-                <div class="cards participate">
-                    <ul id="joincard">
+               <div class="cards participate">
+                  <ul id="joincard">
                         <!-- 이 부분에 <li>로 모임 카드들 추가됨-->
                     </ul>
-                </div>
-                <div class="scrollBt-left">왼쪽버튼</div>
-                <div class="scrollBt-right">오른쪽버튼</div>
+               </div>
+                   <div class="scrollBt-left">왼쪽버튼</div>
+                   <div class="scrollBt-right">오른쪽버튼</div>
             </div>
-
-            <!--팝업 창-->
+                           <!--팝업 창-->
             <div class="popup_layer" id="popup_layer" style="display: none;">
                 <div class="popup_box">
                     <div style="height: 10px; width: 375px; float: top;">
@@ -455,14 +329,12 @@
                     </div>
                 </div>
             </div>
-
-            <script>
-                //스크롤 버튼
-                $(".scrollBt-right").click(function () {
-                    $(this).siblings(".cards").animate({scrollLeft: "+=500"}, 800);
+                <script>
+               //스크롤 버튼
+                    $(".scrollBt-right").click(function(){ $(this).siblings(".cards").animate({scrollLeft:"+=500"},800);
                 });
-                $(".scrollBt-left").click(function () {
-                    $(this).siblings(".cards").animate({scrollLeft: "-=500"}, 800);
+                $(".scrollBt-left").click(function(){
+                    $(this).siblings(".cards").animate({scrollLeft:"-=500"},800);
                 });
 
                 //팝업 띄우기
@@ -537,10 +409,9 @@
                 }
 
                 window.onload = meeting_read;
-
-            </script>
-        </div>
-    </div>
-</div>
+               </script>
+            </div>
+            </div>
+            </div>
 </body>
 </html>
