--- a/templates/main.html
+++ b/templates/main.html
@@ -1,287 +1,8 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
-<head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+{% extends "base.html" %}
+{% block title %} : main{% endblock %}
+{% block head %}
     <script src="{{ url_for('static', filename='jquery.mousewheel.js') }}"></script>
-    <meta charset="UTF-8">
-    <title>모닥불</title>
-</head>
 <style>
-    html, body{
-        margin: 0;
-        border: 0;
-        width : 100%;
-        height: 100%;
-    }
-
-    .container{
-    }
-
-    .main{
-        margin: 0;
-        border: 0;
-        width : 100%;
-        height: 100%;
-    }
-
-    header{
-        top:0px;
-        padding: 1rem 2rem;
-        z-index:10;
-        display:flex;
-        position: relative;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #F5A9A9;
-    }
-
-    header .logo{
-        font-weight:bold;
-        color:white;
-        font-size:2rem;
-        text-decoration: none;
-    }
-    .navbar{
-        display: flex;
-        position: relative;
-    }
-    .search input{
-        height:30px;
-        margin-right:1rem;
-    }
-
-    .contents{
-        overflow: hidden;
-    }
-
-    .category {
-        padding: 1rem;
-        display:flex;
-        position: relative;
-        align-items: center;
-        background-color: #F5A9A9;;
-        z-index: 5;
-    }
-
-
-    .category ul {
-        list-style: none;
-        padding-left: 0;
-        display: flex;
-    }
-
-    .category form select{
-        height:30px;
-    }
-    .tags li{
-        padding:5px;
-        background-color: white;
-        font-size: 0.5rem;
-        border-radius:10px;
-        margin-left:5px;
-    }
-
-    .cardContainer{
-        position: relative;
-        display:flex;
-        align-items: center;
-        background-color: #F5A9A9;
-        overflow:hidden;
-        padding: 1rem;
-        padding-bottom:1.5rem;
-        z-index: 5;
-    }
-    .cards{
-        width:100%;
-        position: relative;
-        display:flex;
-        align-items: center;
-        overflow: scroll;
-        white-space: nowrap;
-        ms-overflow-style: none; /* IE and Edge */
-        scrollbar-width: none; /* Firefox */
-
-    }
-
-    .cards::-webkit-scrollbar {
-        display: none; /* Chrome, Safari, Opera*/
-    }
-
-    .cards ul{
-        padding: 0;
-        margin: 0;
-    }
-
-    .card{
-        display: inline-block;
-        list-style: none;
-        padding-left: 0;
-        margin-right:2px;
-        border: 1px solid gray;
-        width:150px;
-        height: 200px;
-        background-color:white;
-    }
-
-    .map{
-        width:100%;
-        position:absolute;
-        bottom: 0;
-        overflow: hidden;
-        z-index: 0;
-    }
-
-    .scrollBt-right{
-        position:absolute;
-        right:0;
-        z-index:4;
-    }
-
-    .scrollBt-left{
-        position:absolute;
-        left:0;
-        z-index:4;
-    }
-
-    .hideToggle{
-        position:absolute;
-        width:100%;
-        text-align:center;
-        bottom:0;
-    }
-
-    .detailsBg {
-        width:100%;
-        height:100%;
-        margin: 0;
-        padding: 0;
-    }
-
-    .detailsBg{
-        background: rgba(255, 255, 255, 0.5);
-        position: fixed;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        top:0;
-        z-index: 100;
-    }
-
-    .detailsWrap{
-        max-width: 450px;
-        width:80%;
-        height:80%;
-        background-color: white;
-        border:1px solid lightgray;
-        border-radius: 5px;
-        display: flex;
-        flex-direction: column;
-        padding:2rem;
-    }
-
-    .detailTitle{
-        display: flex;
-        align-items: center;
-        margin-bottom: 1rem;
-        position: relative;
-    }
-    .detailTitle .meetPic{
-        width:50px;
-        height:50px;
-        background-color: gainsboro;
-        border-radius: 50%;
-    }
-
-    .detailTitle h2{
-        margin: 0;
-        padding: 0;
-        margin-left: 10px;
-    }
-
-    .detailTitle span{
-        margin-left:10px;
-        padding-top: 10px;
-    }
-
-    .detailTags ul{
-        display: flex;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        align-items: center;
-    }
-
-    .detailTags #bigTag li{
-        padding:10px 20px;
-        margin-right: 5px;
-        background-color: gainsboro;
-        border-radius: 50px;
-    }
-
-    .detailTags #smallTag li{
-        padding: 10px;
-        font-size: 0.1rem;
-    }
-
-    .detailTags #smallTag li::before{
-        content: "# ";
-        font-weight: bold;
-        font-size: 0.8rem;
-    }
-
-    .detailContents{
-        flex:1;
-        border: 1px solid lightgray;
-        overflow-y: scroll;
-    }
-
-    .detailContents img{
-        max-width:100%;
-    }
-
-    .detailFooter{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding-top: 1rem;
-    }
-
-    #numPeople{
-        font-size: 0.8rem;
-        font-weight: bold;
-        color:darkslategray;
-    }
-
-    #numPeople span:nth-child(1){
-        font-size: 1.5rem;
-    }
-
-    #numPeople span:nth-child(2){
-        font-size: 1rem;
-    }
-
-    #numPeople span:nth-child(3){
-        font-size: 1rem;
-    }
-
-    .detailFooter button{
-        border: 0;
-        color:white;
-        background-color: gray;
-        font-weight: bold;
-        padding:10px 40px;
-        border-radius: 50px;
-    }
-      .detailTitle button{
-        position: absolute;
-        right:0;
-        top:0;
-        background: 0;
-        border: 0;
-        font-size: 1.2rem;
-        font-weight: bold;
-    }
-
     .wrap {position: absolute;left: 0;bottom: 40px;width: 288px;height: 132px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
     .wrap * {padding: 0;margin: 0;}
     .wrap .info {width: 286px;height: 120px;border-radius: 5px;border-bottom: 2px solid #ccc;border-right: 1px solid #ccc;overflow: hidden;background: #fff;}
@@ -296,31 +17,11 @@
     .info .img {position: absolute;top: 6px;left: 5px;width: 73px;height: 71px;border: 1px solid #ddd;color: #888;overflow: hidden;}
     .info:after {content: '';position: absolute;margin-left: -12px;left: 50%;bottom: 0;width: 22px;height: 12px;background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
     .info .link {color: #5085BB;}
-
 </style>
-<body>
-   <div class="main container">
-       <header class="container">
-           <a class="logo" href="/"> 모닥불 </a>
-           <nav class="navbar">
-               {% if not session['userid'] %}
-                    <button style=margin-right:20px;"><a href="/login">로그인</a></button>
-               {% else %}
-                    {% if session['profile'] %} <!-- 프로필이 있다면 -->
-                        <img src="{{session['profile']}}" width="30px"; height="30px"; style="margin-right:5px;border-radius: 50%;">
-                    {% endif %}
-                    {{session['username']}}님 반갑습니다.
-                    <button style="margin-left:20px;margin-right:20px;"><a href="/logout">로그아웃</a></button>
-               {% endif %}
-               <div class="search">
-                   <form action="#" method="post">
-                       <input type="text" name="keyword" placeholder="검색">
-                       <input type="submit" value="src">
-                   </form>
-               </div>
-               <button class="mypage"><a href="/mypage">mypage</a></button>
-           </nav>
-        </header>
+    <link rel = "stylesheet" href="static/css/main.css">
+    {{ super() }}
+{% endblock %}
+{% block body %}
        <div class="contents conatainer">
            <div class="category"> <form action="#" method="post">
                <!-- 디자인 하려면 button->li로 넣어야 할듯 -->
