--- a/Modakbul_Backend-minwoo/templates/meetpage.html
+++ b/Modakbul_Backend-minwoo/templates/meetpage.html
@@ -286,7 +286,7 @@
                <input type="text" name="keyword" placeholder="검색">
                <input type="submit" value="src">
            </form></div>
-           <button class="mypage">mypage</button>
+           <button class="mypage"><a href="/mypage">mypage</a></button>
            </nav>
         </header>
        <div class="contents conatainer">
